src/test/deca/context/valid/variable/valid_variable_declaration_underscore3.deca
// Description:
//    Valid declaration of a variable with "_"
//
// [Begin Result]
// no error
// [End Result]
//
// History:
//    Created on 10/01/2025.

{
    boolean _= true;

}
