src/test/deca/context/invalid/operations/bool/invalid_bool_op_neq_str.deca
// Description:
//    test invalid NEQ between boolean and string
//
// [Begin Result]
//invalid_bool_op_neq_str.deca:12:24: Unsupported operation '!=' between types string and boolean. (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    boolean a = "false" != true;
}